<resources>
    <string name="app_name">MAD_App</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="dashboard">Dashboard</string>
    <string name="starred">Favorites</string>
    <string name="add">Add Record</string>
    <string name="search">Search</string>
    <string name="setting">Setting</string>
    <string name="submit">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>