<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/dashboard"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/dashboard" />

    <item
        android:id="@+id/starred"
        android:icon="@drawable/ic_baseline_star_24"
        android:title="@string/starred" />

    <item
        android:id="@+id/add_new"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/add" />

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        />
    <item
        android:id="@+id/setting"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/setting"
        />

</menu>